--- a/css/blog.css
+++ b/css/blog.css
@@ -434,6 +434,12 @@ footer * {
   .nav-body {
     margin-bottom: 5px;
   }
+  .header-flex-content {
+    justify-content: space-between;
+  }
+  .header-menu-window {
+    padding: 70px 30px 20px 50px;
+  }
 
   .footer-container {
     padding: 15px;
@@ -502,15 +508,22 @@ footer * {
     max-width: none;
     text-align: center;
   }
-  .nav-form-wrapper {
-    display: none;
-  }
   .main-title {
     font-size: 36px;
   }
 }
 
 @media (max-width: 450px) {
+  .nav-search {
+    display: none;
+  }
+  .nav-submit i {
+    font-size: 18px;
+  }
+  .nav-submit {
+    left: 8px;
+    top: -3px;
+  }
   .footer li {
     padding: 0 15px 20px 0;
   }
