--- a/css/main.css
+++ b/css/main.css
@@ -896,9 +896,7 @@ footer * {
     max-width: none;
     text-align: center;
   }
-  .nav-form-wrapper {
-    display: none;
-  }
+
   .main-title {
     font-size: 36px;
   }
@@ -933,6 +931,17 @@ footer * {
   .favorite-items {
     gap: 5px;
     justify-content: center;
+  }
+  .nav-search {
+    display: none;
+  }
+  .nav-submit i {
+    color: #fff;
+    font-size: 18px;
+  }
+  .nav-submit {
+    left: 8px;
+    top: -3px;
   }
 }
 @media (max-width: 450px) {
