--- a/css/product.css
+++ b/css/product.css
@@ -941,12 +941,19 @@ footer * {
     max-width: none;
     text-align: center;
   }
-  .nav-form-wrapper {
-    display: none;
-  }
 }
 
 @media (max-width: 450px) {
+  .nav-search {
+    display: none;
+  }
+  .nav-submit i {
+    font-size: 18px;
+  }
+  .nav-submit {
+    left: 8px;
+    top: -3px;
+  }
   .nav {
     background: #f2f2f2;
     min-height: 130vh;
