--- a/css/wallet.css
+++ b/css/wallet.css
@@ -626,12 +626,19 @@ option {
     max-width: none;
     text-align: center;
   }
-  .nav-form-wrapper {
-    display: none;
-  }
 }
 
 @media (max-width: 450px) {
+  .nav-search {
+    display: none;
+  }
+  .nav-submit i {
+    font-size: 18px;
+  }
+  .nav-submit {
+    left: 8px;
+    top: -3px;
+  }
   .order-columns {
     flex-direction: column;
   }
